Bug 45268 - missing field ( and groupnames ) when importing xlsx pivot table
Summary: missing field ( and groupnames ) when importing xlsx pivot table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Noel Power
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-26 04:27 UTC by Noel Power
Modified: 2012-02-16 02:05 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
test document showing missing field (22.82 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2012-01-26 04:29 UTC, Noel Power
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Noel Power 2012-01-26 04:27:16 UTC
will attach a test document showing imported pivot table with missing data field with grouped data, additionally sometimes even when such group fields are imported then the grouping data sometimes is corrupted ( see, document https://bugs.freedesktop.org/attachment.cgi?id=56181 attached to issue #45266 )
Comment 1 Noel Power 2012-01-26 04:27:48 UTC
working on this, assigning to myself
Comment 2 Noel Power 2012-01-26 04:29:48 UTC
Created attachment 56182 [details]
test document showing missing field
Comment 3 Noel Power 2012-02-16 02:05:09 UTC
fixed
master:16af091a3339f6d00fe273f9dc5f155126e58881