fix corrupted group field entries in xlsx imported pivot table fdo#45268